--- a/program/index.html
+++ b/program/index.html
@@ -20,10 +20,10 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">D-LOCKS</span><span class="title2">Workshop</span> <span class="year">2024</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            January 11-12, 2525 <br> Technical University of Denmark, Kgs. Lyngby
         </div>
     </div>
 
@@ -42,13 +42,16 @@
                 <a title="Directions to the Conference" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Nearby Accomodation" href="accomodation">Accomodation</a>
             </td>
         </tr>
     </table>
 
     <h2>Conference Program</h2>
-
+    
+    TBD
+    
+    <!---
     <table>
         <tr>
             <td class="date" rowspan="2">
@@ -149,7 +152,8 @@
             </td>
         </tr>
     </table>
-
+    -->
+    <!--
     <table>
         <tr>
             <td class="date" rowspan="2">
@@ -161,7 +165,9 @@
         </tr>
         <tr>
             <td class="abstract">
+    -->
                 <!-- Kept for Spacing -->
+                <!--
             </td>
         </tr>
     </table>
@@ -199,7 +205,9 @@
         </tr>
         <tr>
             <td class="abstract">
+            -->
                 <!-- Kept for Spacing -->
+    <!---
             </td>
         </tr>
     </table>
@@ -257,7 +265,9 @@
         </tr>
         <tr>
             <td class="abstract">
+    -->
                 <!-- Kept for Spacing -->
+    <!--
             </td>
         </tr>
     </table>
@@ -324,9 +334,9 @@
             </td>
         </tr>
     </table>
-
+    -->
     <footer>
-        &copy; Conference Organizers
+        &copy; D-LOCKS
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
