--- a/accomodation/index.html
+++ b/accomodation/index.html
@@ -36,10 +36,10 @@
                     <a title="Conference Program" href="program">Program</a>
                 </td>
                 <td class="navigation">
-                    <a class="current" title="Directions to the Conference" href="directions">Directions</a>
+                    <a title="Directions to the Conference" href="directions">Directions</a>
                 </td>
                 <td class="navigation">
-                    <a title="Nearby Accomodation" href="accomodation">Accomodation</a>
+                    <a class="current" title="Nearby Accomodation" href="accomodation">Accomodation</a>
                 </td>
             </tr>
         </table>
