--- a/accomodation/index.html
+++ b/accomodation/index.html
@@ -15,7 +15,7 @@
     <body>
 
         <div class="banner">
-            <img src="assets/banner.jpg" alt="Conference Template Banner">
+            <img src="assets/JWST_SMACS.png" alt="Conference Template Banner">
             <div class="top-left">
                 <span class="title1">D-LOCKS</span><span class="title2">Workshop</span> <span class="year">2024</span>
             </div>
