--- a/accomodation/index.html
+++ b/accomodation/index.html
@@ -47,7 +47,7 @@
 
     <br>
     <p>
-    The <a href='https://www.zleep.com/en/hotel/lyngby/'>Zleep</a> hotel in Lyngby right next to DTU will give a 15% discount (we will get a proportion code), after the 'first come first served' principle.
+    The <a href='https://www.zleep.com/en/hotel/lyngby/'>Zleep</a> hotel in Lyngby (right next to DTU) will give a 15% discount on room for D-LOCKS participants. No rooms have been reserved for the workshop, so the discount will be given to the individual participants when booking after the 'first come first served' principle. Please contact the LOC at <a href='mailto:dlocks.galaxy.evolution@gmail.com?subject=Zleep hotel discount code'>dlocks.galaxy.evolution@gmail.com</a> after you have registered to receive the promotion code.
     </p>
     
     <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2243.8251752309425!2d12.519717933326529!3d55.778908120396515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46524e7a3c98cddb%3A0x6e30e1b7c8e89ae1!2sZleep%20Hotel%20Lyngby!5e0!3m2!1sen!2sdk!4v1696341949471!5m2!1sen!2sdk"></iframe>
