--- a/directions/index.html
+++ b/directions/index.html
@@ -47,11 +47,26 @@
 
     <h2>Directions</h2>
     <p>
-        The D-LOCKS 2024 workshop will be hosted by DTU/DAWN in building 101A meeting room M1, on the first floor across the hallway from the administration. A map to the venue can be seen below.
+    The D-LOCKS 2024 workshop will be hosted by DTU/DAWN at:<br>
+    </p>
+    <p>
+    Anker Engelunds Vej 101, 2800 Kongens Lyngby
+    </p>
+    <p>
+    Meeting room M1, which can be found on the 1st floor.
     </p>
     
     <p>
-        Several methods for travelling between Copenhagen and DTU exist. From the airport, the metro-line M2 connects to Nørreport where both Bus 150S and 15E can take you 300m from building 101 (Rævehøjvej DTU (Helsingørmotorvejen)). Otherwise, the S-train line A connects to Lyngby Station from where bus 300S takes you to DTU (Rævehøjvej DTU (Lundtoftegårdsvej)). Use <a href='https://rejseplanen.dk/webapp/?language=en_EN'>rejseplanen.dk</a> for exact departure times, a map and connections.
+    There are several options for reaching DTU from Copenhagen airport and central station.
+    </p>
+    <ul>
+        <li> <b>CPH airport to Nørreport:</b> Metro-line M2 connects the airport to Nørreport station in the city centre. From Nørreport bus 150S and 15E can take you to DTU and stops ca. 300m from building 101 (Rævehøjvej DTU (Helsingørmotorvejen))
+    </ul>
+    <ul>
+        <li> <b>CPH airport to Copenhagen Central (Københavns hovedbanegård):</b> Øresundstog runs between Copenhagen airport and Copenhagen Central Station. From Copenhagen Central (and Nørreport) runs the S-tran lines A and E to Lyngby. From Lyngby Station, DTU can be reached either by foot (20-30min walk), or by bus 300S, 181 or 190.
+    </ul>
+    <p>
+    Use <a href='https://rejseplanen.dk/webapp/?language=en_EN'>rejseplanen.dk</a> for exact departure times, a map and connections.
     </p>
 
     <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2243.3832952067846!2d12.52170931776708!3d55.78658199988516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46524e7d17c19293%3A0xb4f76d9ee3838b16!2sAnker%20Engelunds%20Vej%20101%2C%202800%20Kongens%20Lyngby!5e0!3m2!1sen!2sdk!4v1696339107668!5m2!1sen!2sdk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
