--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
 
     <h2>Announcement</h2>
     <p>
-    ==================================================================== <br>
-    The 1st DTU, Lund, Oslo, Chalmers, KU and Stockholm (D-LOCKS)
-    workshop on galaxy evolution <br>
+    ================================================================================ <br>
+    The 1st DTU, Lund, Oslo, Chalmers, KU and Stockholm (D-LOCKS) workshop on galaxy evolution <br>
     ‘The Devil is in the Detail: Extragalactic Astronomy at High Resolution’ <br>
     DTU, Kongens Lyngby, Denmark <br>
     11th and 12th January 2024 <br>
-    ==================================================================== <br>
+    ================================================================================ <br>
     </p>
     
     <p>
@@ -99,6 +98,7 @@
     Danial Langeroodi (KU/Dark, SOC)<br>
     Johan Fynbo (KU/DAWN, SOC)<br>
     Matthew Hayes (Stockholm, SOC)<br>
+    Johannes Puschnig (Uppsala, SOC)
     </p>
     
     <!--
