--- a/program/index.html
+++ b/program/index.html
@@ -48,9 +48,12 @@
     </table>
 
     <h2>Conference Program</h2>
-    
-    TBD
-    
+    <p>
+    The two day workshop will run on the 11th and 12th January.<br>
+    The scientific program will start on Thursday the 11th January in the late morning (ca. 11) and run until 16:45.<br>
+    On Friday the 12th January the program will start in the morning (ca. 9) and run until the early afternoon (ca. 13.30).<br>
+    The more detailed scientific program will be published in mid-December.
+    </p>
     <!---
     <table>
         <tr>
