--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     This workshop intends to bring together observers and theorists in Scandinavia to discuss advances in modelling and observational techniques in extragalactic astronomy. We would therefore like to invite colleagues from DTU, Lund, Oslo, Chalmers, KU and Stockholm to DTU with the aim to foster collaborations, exchange of ideas, and create strong ties between the institutes and universities. This is an excellent opportunity to showcase the progress of early career researchers, in particular master students, PhD students and young postdocs. <br>
     </p>
     <p>
-    There will be no registration fee and lunches and coffee/tea breaks will be provided. Please register through this form: <a title="Registration" href="registration">registration</a> <br>
+    There will be no registration fee and coffee/tea breaks will be provided. Please register through this form: <a title="Registration" href="registration">registration</a> <br>
     </p>
     <p>
     Important dates: <br>
