--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
     <p>
     There will be no registration fee, please register through this form: <a title="Registration" href="registration">registration</a> <br>
     </p>
+    
+    <p>
+    In person participation is strongly encouraged, however a zoom link is available in extenuating circumstances.
+    </p> 
+
+
     <p>
     Important dates: <br>
     Announcement: 2nd October 2023<br>
