--- a/program/index.html
+++ b/program/index.html
@@ -54,6 +54,11 @@
     On Friday the 12th January the program will start in the morning (ca. 9) and run until the early afternoon (ca. 13.30).<br>
     The more detailed scientific program will be published in mid-December.
     </p>
+
+    <p>
+    In person participation is strongly encouraged, however a zoom link is available in extenuating circumstances.
+    </p>
+
     <!---
     <table>
         <tr>
