--- a/registration/index.html
+++ b/registration/index.html
@@ -47,13 +47,14 @@
     <br>
 
     <p>
-        Please register by filling out the form below.
+        Registration has closed.
     </p>
     <!--
     <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
     -->
+    <!--
     <iframe class="registration" src="https://docs.google.com/forms/d/e/1FAIpQLScRU4P0C9vPwCxBs-Mnw2zzsZBWulq6ze3-TAqGB8vHMPOvbw/viewform?embedded=true">Loading…</iframe>
-    
+    -->
 
     <footer>
         &copy; D-LOCKS
