added list of restaurants

--- a/registration/index.html
+++ b/registration/index.html
@@ -41,6 +41,9 @@
             <td class="navigation">
                 <a title="Conference Flyer" href="accomodation">Accomodation</a>
             </td>
+            <td class="navigation">
+                <a title="Nearby Restaurants" href="restaurants">Restaurants</a>
+            </td>
         </tr>
     </table>
 
