--- a/directions/index.html
+++ b/directions/index.html
@@ -29,9 +29,9 @@
             <td class="navigation">
                 <a title="Conference Home Page" href=".">Home</a>
             </td>
-            <td class="navigation">
+            <!--<td class="navigation">
                 <a title="Register for the Conference" href="registration">Registration</a>
-            </td>
+            </td>-->
             <td class="navigation">
                 <a title="Conference Program" href="program">Program</a> 
             </td>
@@ -40,6 +40,9 @@
             </td>
             <td class="navigation">
                 <a title="Nearby Accomodation" href="accomodation">Accomodation</a>
+            </td>
+            <td class="navigation">
+                <a title="Nearby Restaurants" href="restaurants">Restaurants</a>
             </td>
         </tr>
     </table>
