--- a/program/index.html
+++ b/program/index.html
@@ -47,9 +47,9 @@
             <td class="navigation">
                 <a title="Conference Home Page" href=".">Home</a>
             </td>
-            <td class="navigation">
+            <!--<td class="navigation">
                 <a title="Register for the Conference" href="registration">Registration</a>
-            </td>
+            </td>-->
             <td class="navigation">
                 <a class="current" title="Conference Program" href="program">Program</a> 
             </td>
@@ -58,6 +58,9 @@
             </td>
             <td class="navigation">
                 <a title="Nearby Accomodation" href="accomodation">Accomodation</a>
+            </td>
+            <td class="navigation">
+                <a title="Nearby Restaurants" href="restaurants">Restaurants</a>
             </td>
         </tr>
     </table>
