Uppsala review speaker

--- a/program/index.html
+++ b/program/index.html
@@ -200,7 +200,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                TBA (Uppsala)
+                Martin Sahlén (Uppsala)
             </td>
         </tr>
         </tr>
