update review speaker

--- a/program/index.html
+++ b/program/index.html
@@ -428,7 +428,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                TBA (DAWN/KU)
+                Johan Fynbo (DAWN/KU)
             </td>
         </tr>
         </tr>
