--- a/program/index.html
+++ b/program/index.html
@@ -293,7 +293,7 @@
             <td class="abstract">
                 Nikolaj Bjerregaard Sillassen <br>
                 Madeleine Yttergren <br>
-                Bernhard Baumschlager <br>
+                <!-- Bernhard Baumschlager <br> -->
                 Corentin Cadiou <br>
                 Minju Lee <br>
             </td>
