--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
         </div>
     </div>
     
+    <div class="banner">
+        <img src='assets/Workshop_photo_2024.JPG' alt='Workshop Photo' style='width:100%'>
+    </div>
+    
     <p>
     We are happy to announce that DTU will be hosting the 1st DTU, Lund, Oslo, Chalmers, KU and Stockholm (D-LOCKS) workshop on the 11th and 12th of January 2024.
     </p>
